tests/DevantlerTech.KubernetesGenerator.Native.Tests/IngressGeneratorTests/ingress-annotations.yaml.verified.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  creationTimestamp: null
  name: annotated-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: app-service
            port:
              number: 80
        path: /app
        pathType: Exact
status:
  loadBalancer: {}
