tests/DevantlerTech.KubernetesGenerator.Native.Tests/IngressGeneratorTests/ingress-basic.yaml.verified.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: simple-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: app-service
            port:
              number: 80
        path: /app
        pathType: Exact
status:
  loadBalancer: {}
