tests/DevantlerTech.KubernetesGenerator.Native.Tests/IngressGeneratorTests/ingress-default-backend.yaml.verified.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: default-backend-ingress
  namespace: default
spec:
  defaultBackend:
    service:
      name: default-service
      port:
        number: 80
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: app-service
            port:
              number: 80
        path: /app
        pathType: Exact
status:
  loadBalancer: {}
