tests/DevantlerTech.KubernetesGenerator.Native.Tests/IngressGeneratorTests/ingress-minimal.yaml.verified.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ingress-minimal
spec:
  defaultBackend:
    service:
      name: default-service
      port:
        number: 80
status:
  loadBalancer: {}
