tests/DevantlerTech.KubernetesGenerator.Native.Tests/IngressGeneratorTests/ingress-multiple-rules.yaml.verified.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: multi-rule-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: api-service
            port:
              number: 80
        path: /
        pathType: Exact
  - host: web.example.com
    http:
      paths:
      - backend:
          service:
            name: web-service
            port:
              number: 80
        path: /
        pathType: Exact
  - host: admin.example.com
    http:
      paths:
      - backend:
          service:
            name: admin-service
            port:
              number: 8080
        path: /admin
        pathType: Prefix
status:
  loadBalancer: {}
