tests/DevantlerTech.KubernetesGenerator.Native.Tests/IngressGeneratorTests/ingress-name-only.yaml.verified.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: simple-ingress
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: app-service
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
