tests/DevantlerTech.KubernetesGenerator.Native.Tests/IngressGeneratorTests/ingress-tls.yaml.verified.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ingress-tls
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: web-service
            port:
              number: 80
        path: /
        pathType: Exact
  tls:
  - hosts:
    - example.com
    secretName: tls-secret
status:
  loadBalancer: {}
